Add initial files and edit colors.scss and typography.scss

--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -3,17 +3,22 @@
 ---
 
 <footer class="site-footer">
-  <div class="container">
-    <p>Footer content here!</p>
-  </div>
+  <p>
+    Challenge by <a
+      href="https://www.frontendmentor.io?ref=challenge"
+      target="_blank">Frontend Mentor</a
+    >. Coded by <a href="#">Kamran Kiani</a>.
+  </p>
 </footer>
 
 <style lang="scss">
   @use "../styles/abstracts" as *;
 
   .site-footer {
+    font-size: 11px;
     background-color: $footer-background-color;
     color: $footer-text-color;
+    text-align: center;
 
     a {
       color: $footer-link-color;
