--- a/src/styles/abstracts/_typography.scss
+++ b/src/styles/abstracts/_typography.scss
@@ -1,32 +1,40 @@
-$-ff-sans: system-ui, sans-serif;
-$-ff-serif: serif;
+$-ff-sans: "Inter", sans-serif;
 
 $font-family-base: $-ff-sans;
-$font-family-accent: $-ff-sans;
+
+$-font-size-heading-xl: 3.5rem;
+$-font-size-heading-l: 2.5rem;
+$-font-size-heading-m: 2rem;
+$-font-size-heading-s: 1.25rem;
+$-font-size-heading-xs: 1.125rem;
+$-font-size-body: 0.9375rem;
+$-font-size-button: 0.875rem;
+$-font-size-footer: 0.75rem;
 
 $font-sizes: (
   "small": (
-    "900": 3.75rem,
-    "800": 2.25rem,
-    "700": 1.75rem,
-    "600": 1.125rem,
-    "500": 1.125rem,
-    "400": 1rem,
-    "300": 0.925rem,
-    "200": 0.875rem,
+    "900": $-font-size-heading-l,
+    "800": $-font-size-heading-m,
+    "700": $-font-size-heading-m,
+    "600": $-font-size-heading-s,
+    "500": $-font-size-heading-xs,
+    "400": $-font-size-body,
+    "300": $-font-size-button,
+    "200": $-font-size-footer,
   ),
-  "large": (
-    "900": 3.75rem,
-    "800": 3rem,
-    "700": 1.75rem,
-    "600": 1.3125rem,
-    "500": 1.125rem,
-    "400": 1rem,
-    "300": 0.925rem,
-    "200": 0.875rem,
+  "medium": (
+    "900": $-font-size-heading-xl,
+    "800": $-font-size-heading-l,
+    "700": $-font-size-heading-m,
+    "600": $-font-size-heading-s,
+    "500": $-font-size-heading-xs,
+    "400": $-font-size-body,
+    "300": $-font-size-button,
+    "200": $-font-size-footer,
   ),
 );
 
+$font-size-200: var(--fs-200);
 $font-size-300: var(--fs-300);
 $font-size-400: var(--fs-400);
 $font-size-500: var(--fs-500);
@@ -36,9 +44,9 @@ $font-size-800: var(--fs-800);
 $font-size-900: var(--fs-900);
 
 $-fw-400: 400;
-$-fw-500: 500;
 $-fw-700: 700;
+$-fw-800: 800;
 
 $font-weight-default: $-fw-400;
-$font-weight-semi-bold: $-fw-500;
 $font-weight-bold: $-fw-700;
+$font-weight-extra-bold: $-fw-800;
