--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 const { El = "div", TitleLevel = "h2", title } = Astro.props;
 ---
 
@@ -25,4 +25,4 @@ const { El = "div", TitleLevel = "h2", title } = Astro.props;
       @include heading($card-heading-font-size, $card-heading-color-default);
     }
   }
-</style>
+</style> -->
