--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -15,7 +15,8 @@
   @use "../styles/abstracts" as *;
 
   .site-footer {
-    font-size: 11px;
+    margin-top: auto;
+    font-size: $footer-font-size;
     background-color: $footer-background-color;
     color: $footer-text-color;
     text-align: center;
