--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -1,16 +1,19 @@
 ---
 import PrimaryNavigation from "./PrimaryNavigation.astro";
-const { skipTo = "#main" } = Astro.props;
+// const { skipTo = "#main" } = Astro.props;
 ---
 
 <header class="site-header">
-  <a href={skipTo} class="skip-navigation">Skip to content</a>
-
   <div class="container">
     <div class="site-header__inner">
       <a href="/index.html">
-        <img aria-hidden="true" src="/images/logo.svg" alt="" />
-        <p class="visually-hidden">NAME_OF_SITE</p>
+        <img
+          class="logo-image"
+          aria-hidden="true"
+          src="/assets/images/logo.svg"
+          alt=""
+        />
+        <p class="visually-hidden">W. - Home</p>
       </a>
 
       <PrimaryNavigation />
@@ -26,6 +29,10 @@ const { skipTo = "#main" } = Astro.props;
     background-color: $site-header-background-color;
     padding: $site-header-padding;
 
+    @include mq(medium) {
+      padding: $site-header-padding-desktop;
+    }
+
     &__inner {
       display: flex;
       gap: $size-4;
@@ -38,31 +45,11 @@ const { skipTo = "#main" } = Astro.props;
     }
   }
 
-  .skip-navigation {
-    position: absolute;
-    transform: translateY(-100%);
-    inset: 0 0 auto 0;
-    width: fit-content;
+  .logo-image {
+    width: 45px;
 
-    color: $skip-nav-color;
-    background-color: $skip-nav-background-color;
-    padding: $skip-nav-padding;
-
-    @if ($skip-nav-position == "center") {
-      margin-inline: auto;
-    } @else if ($skip-nav-position == "right") {
-      margin-inline-start: auto;
-      margin-inline-end: 1rem;
-    } @else {
-      margin-inline-start: 1rem;
-    }
-
-    &:focus {
-      color: $skip-nav-color;
-      background-color: $skip-nav-background-color;
-      transform: translateY(0);
-      outline: $skip-nav-outline-color $skip-nav-outline-size solid;
-      outline-offset: $skip-nav-outline-offset;
+    @include mq(medium) {
+      width: 64px;
     }
   }
 </style>
