--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,5 +14,6 @@ const { title } = Astro.props;
       <slot />
     </main>
     <SiteFooter />
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
