--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,14 @@
 ---
-import SiteFooter from "../components/SiteFooter.astro";
-import SiteHeader from "../components/SiteHeader.astro";
+import Feature from "../components/Feature.astro";
+import New from "../components/New.astro";
+import Blog from "../components/Blog.astro";
 import Layout from "../layouts/BaseLayout.astro";
 ---
 
 <Layout title="Frontend Mentor | News homepage">
-  <div class="container">
-    Home New Popular Trending Categories The Bright Future of Web 3.0? We dive
-    into the next evolution of the web that claims to put the power of the
-    platforms back into the hands of the people. But is it really fulfilling its
-    promise? Read more New Hydrogen VS Electric Cars Will hydrogen-fueled cars
-    ever catch up to EVs? The Downsides of AI Artistry What are the possible
-    adverse effects of on-demand AI image generation? Is VC Funding Drying Up?
-    Private funding by VC firms is down 50% YOY. We take a look at what that
-    means. 01 Reviving Retro PCs What happens when old PCs are given modern
-    upgrades? 02 Top 10 Laptops of 2022 Our best picks for various needs and
-    budgets. 03 The Growth of Gaming How the pandemic has sparked fresh
-    opportunities.
-  </div>
+  <article class="container grid">
+    <Feature />
+    <New />
+    <Blog />
+  </article>
 </Layout>
