--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -3,6 +3,7 @@
 ---
 
 <section class="blog">
+  <h3 class="visually-hidden">Blog Posts</h3>
   <article class="blog--post">
     <img
       src="/assets/images/image-retro-pcs.jpg"
