--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import Layout from "../layouts/BaseLayout.astro";
 ---
 
 <Layout title="Frontend Mentor | News homepage">
-  <article class="container grid">
+  <div class="container grid">
     <Feature />
     <New />
     <Blog />
-  </article>
+  </div>
 </Layout>
